--- a/bluecollar/src/main/res/layout/activity_add_trend.xml
+++ b/bluecollar/src/main/res/layout/activity_add_trend.xml
@@ -30,4 +30,14 @@
             android:layout_marginBottom="@dimen/padding_default"/>
     </LinearLayout>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:layout_margin="@dimen/padding_default"
+        android:text="添加"
+        android:textColor="@color/white"
+        android:onClick="doAdd"
+        android:textSize="@dimen/text_default"
+        android:background="@drawable/button_bg"/>
+
 </LinearLayout>
