修改 查看大图 ,与蓝领 找工作

--- a/bluecollar/src/main/res/layout/fragment_blue_home.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_home.xml
@@ -132,6 +132,7 @@
         android:background="@drawable/bg_applyjob"
         android:gravity="center"
         android:padding="8dip"
+        android:visibility="gone"
         android:text="申请职位"
         android:textColor="@color/white"
         android:textSize="@dimen/text_default"/>
