--- a/applyjobs/src/main/res/layout/activity_searchresult.xml
+++ b/applyjobs/src/main/res/layout/activity_searchresult.xml
@@ -23,41 +23,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/bottom_bar"
             android:layout_width="match_parent"
             android:layout_height="40dip"
             android:layout_alignParentBottom="true"
             android:background="@color/white"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:visibility="gone">
 
-            <TextView
-                android:id="@+id/item_store"
+            <View
+                style="@style/line"
+                />
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="收藏"
-                android:textColor="@color/light_color"
-                android:textSize="@dimen/font_size_14"/>
+                android:layout_height="40dip"
+                android:orientation="horizontal"
+                >
 
-            <TextView
-                android:id="@+id/item_send"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/topbar_bg"
-                android:gravity="center"
-                android:text="发送简历"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_size_18"/>
+                <TextView
+                    android:id="@+id/item_store"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="收藏"
+                    android:textColor="@color/light_color"
+                    android:textSize="@dimen/font_size_14"/>
+
+                <TextView
+                    android:id="@+id/item_send"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/topbar_bg"
+                    android:gravity="center"
+                    android:text="发送简历"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_size_18"/>
+
+            </LinearLayout>
 
         </LinearLayout>
-
 
         <in.srain.cube.views.ptr.PtrClassicFrameLayout
             android:id="@+id/load_more_list_view_ptr_frame"
