--- a/bluecollar/src/main/res/drawable/bg_welfare.xml
+++ b/bluecollar/src/main/res/drawable/bg_welfare.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:radius="30dip"
-        ></corners>
-
-    <solid
-        android:color="#cc3492e9"
+        android:radius="2dip"
+        />
+    <stroke
+        android:color="#6bbd00"
+        android:width="1px"
         />
 </shape>
