--- a/campusjobs/src/main/res/layout/activity_campus.xml
+++ b/campusjobs/src/main/res/layout/activity_campus.xml
@@ -25,7 +25,7 @@
             android:background="@drawable/list_item_bg"
             android:clickable="true"
             android:orientation="vertical"
-            android:padding="@dimen/padding_small">
+            android:padding="@dimen/bottom_menu_padding">
 
             <ImageView
                 android:id="@+id/btnImage"
@@ -39,7 +39,7 @@
                 android:id="@+id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
+                android:layout_marginTop="@dimen/bottom_menu_top"
                 android:gravity="center"
                 android:text="首页"
                 android:textColor="@drawable/campus_footer_text"
@@ -54,7 +54,7 @@
             android:background="@drawable/list_item_bg"
             android:clickable="true"
             android:orientation="vertical"
-            android:padding="@dimen/padding_small">
+            android:padding="@dimen/bottom_menu_padding">
 
             <ImageView
                 android:id="@id/btnImage"
@@ -68,7 +68,7 @@
                 android:id="@id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
+                android:layout_marginTop="@dimen/bottom_menu_top"
                 android:gravity="center"
                 android:text="宣讲会"
                 android:textColor="@drawable/campus_footer_text"
@@ -83,7 +83,7 @@
             android:background="@drawable/list_item_bg"
             android:clickable="true"
             android:orientation="vertical"
-            android:padding="@dimen/padding_small">
+            android:padding="@dimen/bottom_menu_padding">
 
             <ImageView
                 android:id="@id/btnImage"
@@ -97,7 +97,7 @@
                 android:id="@id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
+                android:layout_marginTop="@dimen/bottom_menu_top"
                 android:gravity="center"
                 android:text="招聘会"
                 android:textColor="@drawable/campus_footer_text"
@@ -112,7 +112,7 @@
             android:background="@drawable/list_item_bg"
             android:clickable="true"
             android:orientation="vertical"
-            android:padding="@dimen/padding_small">
+            android:padding="@dimen/bottom_menu_padding">
 
             <ImageView
                 android:id="@id/btnImage"
@@ -126,7 +126,7 @@
                 android:id="@id/btnText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"
+                android:layout_marginTop="@dimen/bottom_menu_top"
                 android:gravity="center"
                 android:text="个人中心"
                 android:textColor="@drawable/campus_footer_text"
