--- a/applyjobs/src/main/res/layout/activity_searchresult.xml
+++ b/applyjobs/src/main/res/layout/activity_searchresult.xml
@@ -14,10 +14,7 @@
         android:layout_height="@dimen/space_40"></cn.goodjobs.common.view.ExpandTabSuper.ExpandTabView>
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_below="@id/etv_menu"
-        android:background="@color/line_color"/>
+        style="@style/line"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,6 +32,7 @@
             <View
                 style="@style/line"
                 />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dip"
@@ -60,7 +58,7 @@
                     android:layout_weight="1"
                     android:background="@color/topbar_bg"
                     android:gravity="center"
-                    android:text="发送简历"
+                    android:text="申请职位"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_18"/>
 
