--- a/applyjobs/src/main/res/layout/fragment_home.xml
+++ b/applyjobs/src/main/res/layout/fragment_home.xml
@@ -39,10 +39,10 @@
                     android:orientation="horizontal"
                     android:padding="@dimen/padding_small">
 
-                    <ImageView
-                        android:layout_width="20dip"
-                        android:layout_height="20dip"
-                        android:src="@mipmap/fdj28_grey"/>
+                    <!--<ImageView-->
+                    <!--android:layout_width="20dip"-->
+                    <!--android:layout_height="20dip"-->
+                    <!--android:src="@mipmap/fdj28_grey"/>-->
 
                     <EditText
                         android:id="@+id/etSearch"
@@ -50,8 +50,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/transparent"
+                        android:drawableLeft="@mipmap/fdj28_grey"
                         android:focusable="false"
-                        android:hint="输入关键字/职位/公司搜索"
+                        android:hint=" 输入关键字/职位/公司搜索"
                         android:textSize="@dimen/text_small"/>
 
                     <ImageButton
