--- a/applyjobs/src/main/res/layout/fragment_job_detail.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_detail.xml
@@ -7,36 +7,93 @@
     <LinearLayout
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="40dip"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
         android:orientation="horizontal">
 
-        <TextView
+        <RelativeLayout
+            android:id="@+id/job_share"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/padding_default"
+            android:layout_marginRight="@dimen/padding_default"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/iv_share"
+                android:layout_width="25dip"
+                android:layout_height="25dip"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/padding_small"
+                android:background="@mipmap/icon_share"/>
+
+            <TextView
+                android:id="@+id/tv_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_share"
+                android:layout_centerHorizontal="true"
+                android:paddingBottom="2dip"
+                android:paddingTop="2dip"
+                android:text="分享"
+                android:textColor="@color/topbar_bg"
+                android:textSize="@dimen/text_small"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/job_send"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@drawable/button_bg"
+                android:paddingBottom="@dimen/padding_small"
+                android:paddingTop="@dimen/padding_small"
+                android:text="申请职位"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_default"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/job_store"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="@drawable/job_detail_collect_but_selector"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="收藏"
-            android:textColor="@color/white"
-            android:textSize="@dimen/font_size_14"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="2">
 
-        <TextView
-            android:id="@+id/job_send"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/job_detail_send_but_selector"
-            android:gravity="center"
-            android:text="发送简历"
-            android:textColor="@color/white"
-            android:textSize="@dimen/font_size_18"/>
+            <ImageView
+                android:id="@+id/iv_collect"
+                android:layout_width="25dip"
+                android:layout_height="25dip"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/padding_small"
+                android:background="@mipmap/icon_collect"/>
+
+            <TextView
+                android:id="@+id/tv_collect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_collect"
+                android:layout_centerHorizontal="true"
+                android:paddingBottom="2dip"
+                android:paddingTop="2dip"
+                android:text="收藏"
+                android:textColor="@color/topbar_bg"
+                android:textSize="@dimen/text_small"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
+
+    <View
+        style="@style/line"
+        android:layout_above="@+id/bottom_bar"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -67,7 +124,7 @@
                     android:gravity="center_vertical"
                     android:textColor="@color/black"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
                 <TextView
                     android:id="@+id/job_cro"
@@ -176,7 +233,7 @@
                     android:text="职位亮点"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
 
                 <cn.goodjobs.common.view.XCFlowLayout
@@ -207,7 +264,7 @@
                     android:text="工作说明"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
 
                 <TextView
@@ -237,14 +294,14 @@
                     android:text="其他待遇"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
 
                 <TextView
                     android:id="@+id/job_other"
-                    android:layout_marginTop="@dimen/padding_small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/padding_small"
                     android:textColor="@color/light_color"
                     android:textSize="@dimen/text_small"></TextView>
 
@@ -265,7 +322,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:drawableRight="@drawable/r_icon"
                     android:gravity="center_vertical"
                     android:text="相似职位"
                     android:textColor="@color/bule_low_color"
