--- a/common/src/main/res/drawable/seg_left.xml
+++ b/common/src/main/res/drawable/seg_left.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/tab_green_bg">
+    <item android:drawable="@drawable/tab_green_bg">
         <!--<shape >-->
         <!--<stroke android:color="#0079FF" android:width="1dp"/>-->
         <!--<solid android:color="#0079FF"/>-->
         <!--&lt;!&ndash;    <corners android:topLeftRadius="3dp" android:bottomLeftRadius="3dp" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>&ndash;&gt;-->
         <!--</shape>-->
     </item>
-    <item>
+    <item android:state_selected="true">
         <shape>
-            <stroke android:color="#FFFFFF" android:width="1dp"/>
+            <stroke android:width="1dp" android:color="#FFFFFF"/>
             <solid android:color="#FFFFFF"/>
             <!--  <corners android:topLeftRadius="3dp" android:bottomLeftRadius="3dp" android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>-->
         </shape>
