--- a/common/src/main/res/drawable/seg_right.xml
+++ b/common/src/main/res/drawable/seg_right.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/tab_green_bg">
+    <item  android:drawable="@drawable/tab_green_bg">
         <!--<shape>-->
         <!--<stroke android:width="1dp" android:color="#0079FF" />-->
         <!--<solid android:color="#0079FF" />-->
         <!--&lt;!&ndash;  <corners android:bottomLeftRadius="0dp" android:bottomRightRadius="3dp" android:topLeftRadius="0dp" android:topRightRadius="3dp" />-->
         <!--&ndash;&gt;  </shape>-->
     </item>
-    <item>
+    <item android:state_selected="true">
         <shape>
             <stroke android:width="1dp" android:color="#FFFFFF"/>
             <solid android:color="#FFFFFF"/>
