--- a/applyjobs/src/main/res/layout/activity_jobnews_details.xml
+++ b/applyjobs/src/main/res/layout/activity_jobnews_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -20,8 +19,8 @@
                 android:id="@+id/tv_details_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_small"
                 android:gravity="center"
-                android:padding="@dimen/padding_small"
                 android:textColor="@color/main_color"
                 android:textSize="@dimen/text_large" />
 
@@ -29,7 +28,7 @@
                 android:id="@+id/tv_details_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/padding_small"
+                android:layout_margin="@dimen/padding_small"
                 android:textColor="@color/main_color"
                 android:textSize="@dimen/text_default" />
 
