--- a/applyjobs/src/main/res/layout/fragment_info_center.xml
+++ b/applyjobs/src/main/res/layout/fragment_info_center.xml
@@ -5,71 +5,77 @@
     android:orientation="vertical"
     tools:context="cn.goodjobs.applyjobs.fragment.JobSearchFragment">
 
-    <include layout="@layout/actionbar"/>
+    <include layout="@layout/actionbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv_jobfair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="@dimen/text_default"
-            android:text="招聘会"
-            android:padding="@dimen/padding_small"
             android:gravity="center"
-            android:textColor="@color/main_color"/>
+            android:padding="@dimen/padding_small"
+            android:text="招聘会"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_default" />
 
         <TextView
             android:id="@+id/tv_jobmessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="@dimen/text_default"
-            android:text="职场资讯"
-            android:padding="@dimen/padding_small"
             android:gravity="center"
-            android:textColor="@color/main_color"/>
+            android:padding="@dimen/padding_small"
+            android:text="职场资讯"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_default" />
 
         <TextView
             android:id="@+id/tv_train"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="@dimen/text_default"
-            android:text="培训课程"
-            android:padding="@dimen/padding_small"
             android:gravity="center"
-            android:textColor="@color/main_color"/>
+            android:padding="@dimen/padding_small"
+            android:text="培训课程"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_default" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="3dip"
+        android:background="@color/white"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv_line1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/topbar_bg" />
+
         <TextView
             android:id="@+id/tv_line2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/topbar_bg"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
+
         <TextView
             android:id="@+id/tv_line3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/topbar_bg"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
