--- a/applyjobs/src/main/res/layout/fragment_job_fair.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_fair.xml
@@ -13,7 +13,7 @@
             android:id="@+id/lv_fair"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:dividerHeight="1dip"
+            android:divider="@null"
             android:fadingEdge="none"
             android:listSelector="@android:color/transparent"
             android:scrollbarStyle="outsideOverlay" />
