--- a/campusjobs/src/main/res/layout/item_campus.xml
+++ b/campusjobs/src/main/res/layout/item_campus.xml
@@ -1,116 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/tv_jobName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_default"
-            android:paddingTop="@dimen/padding_small"
-            android:text="会议兼职"
-            android:textColor="@color/topbar_bg"
-            android:textSize="@dimen/text_default" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/tv_pubDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/padding_small"
-            android:gravity="right"
-            android:paddingRight="@dimen/padding_default"
-            android:text="2015-12-30"
-            android:textColor="@color/light_color"
-            android:textSize="@dimen/text_small" />
-
-
-        <TextView
-            android:id="@+id/tv_corpName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/tv_pubDate"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingLeft="@dimen/padding_default"
-            android:paddingTop="@dimen/padding_small"
-            android:text="安徽网才信息技术有限公司"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/text_small" />
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/padding_small"
-        android:paddingTop="@dimen/padding_small">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2">
-
-            <TextView
-                android:id="@+id/tv_salaryName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/padding_default"
-                android:text="10000元/月"
-                android:textColor="@color/main_color"
-                android:textSize="@dimen/text_small" />
-        </RelativeLayout>
+        android:layout_height="100dip"
+        android:layout_marginLeft="@dimen/space_10"
+        android:layout_marginRight="@dimen/space_10"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/space_10"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:singleLine="true"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_default" />
+
+                <TextView
+                    android:id="@+id/item_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="center_vertical|right"
+                    android:textColor="@color/light_color"
+                    android:textSize="@dimen/text_default" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_ftreatment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="    "
-                android:textColor="@color/main_color"
-                android:textSize="@dimen/text_small" />
+                android:id="@+id/item_name"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:textColor="@color/light_color"
+                android:textSize="@dimen/text_default" />
 
-            <TextView
-                android:id="@+id/tv_streatment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding_default"
-                android:text="    "
-                android:textColor="@color/main_color"
-                android:textSize="@dimen/text_small" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_ttreatment3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding_default"
-                android:text="    "
-                android:textColor="@color/main_color"
-                android:textSize="@dimen/text_small" />
+                <cn.goodjobs.common.view.BabushkaText
+                    android:id="@+id/item_salary"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:singleLine="true"
+                    android:textColor="@color/light_color"
+                    android:textSize="@dimen/text_default" />
+
+                <TextView
+                    android:id="@+id/item_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="center_vertical|right"
+                    android:textColor="@color/light_color"
+                    android:textSize="@dimen/text_default" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <View style="@style/line" />
-
+    <View style="@style/line"></View>
 </LinearLayout>
