--- a/headhuntingjob/src/main/res/layout/activity_headhunting.xml
+++ b/headhuntingjob/src/main/res/layout/activity_headhunting.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_color"
     android:orientation="vertical">
 
     <include layout="@layout/topbar" />
@@ -9,39 +10,41 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv_headhunt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="@dimen/text_default"
-            android:text="猎头职位"
-            android:padding="@dimen/padding_small"
             android:gravity="center"
-            android:textColor="@color/main_color"/>
+            android:padding="@dimen/padding_small"
+            android:text="猎头职位"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_default" />
 
         <TextView
             android:id="@+id/tv_reward"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="@dimen/text_default"
-            android:text="悬赏职位"
-            android:padding="@dimen/padding_small"
             android:gravity="center"
-            android:textColor="@color/main_color"/>
+            android:padding="@dimen/padding_small"
+            android:text="悬赏职位"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_default" />
 
         <TextView
             android:id="@+id/tv_agency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="@dimen/text_default"
-            android:text="代理招聘"
-            android:padding="@dimen/padding_small"
             android:gravity="center"
-            android:textColor="@color/main_color"/>
+            android:padding="@dimen/padding_small"
+            android:text="代理招聘"
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/text_default" />
 
     </LinearLayout>
 
@@ -49,27 +52,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="3dip"
+        android:background="@color/white"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv_line1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/topbar_bg" />
+
         <TextView
             android:id="@+id/tv_line2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/topbar_bg"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
+
         <TextView
             android:id="@+id/tv_line3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/topbar_bg"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
