--- a/headhuntingjob/src/main/res/layout/fragment_head.xml
+++ b/headhuntingjob/src/main/res/layout/fragment_head.xml
@@ -4,33 +4,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <in.srain.cube.views.ptr.PtrClassicFrameLayout
-        android:id="@id/load_more_list_view_ptr_frame"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer
-            android:id="@id/load_more_list_view_container"
+        <in.srain.cube.views.ptr.PtrClassicFrameLayout
+            android:id="@id/load_more_list_view_ptr_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffffff">
+            android:layout_height="match_parent">
 
-            <ListView
-                android:id="@id/list_view"
+            <in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer
+                android:id="@id/load_more_list_view_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:divider="@null"
-                android:fadingEdge="none"
-                android:listSelector="@android:color/transparent"
-                android:scrollbarStyle="outsideOverlay" />
+                android:background="#ffffff">
 
-        </in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer>
-    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+                <ListView
+                    android:id="@id/list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="@null"
+                    android:fadingEdge="none"
+                    android:listSelector="@android:color/transparent"
+                    android:scrollbarStyle="outsideOverlay" />
 
-    <cn.goodjobs.common.view.empty.EmptyLayout
-        android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible"></cn.goodjobs.common.view.empty.EmptyLayout>
+            </in.srain.cube.views.ptr.loadmore.LoadMoreListViewContainer>
+        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
+        <cn.goodjobs.common.view.empty.EmptyLayout
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"></cn.goodjobs.common.view.empty.EmptyLayout>
+
+        <Button
+            android:id="@+id/btnChoice"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="@dimen/padding_large"
+            android:background="@drawable/head_trend_bg"
+            android:text="筛选"
+            android:textColor="@color/white"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
 </LinearLayout>
