--- a/bluecollar/src/main/res/layout/item_friends.xml
+++ b/bluecollar/src/main/res/layout/item_friends.xml
@@ -2,20 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/list_item_bg">
-
-    <View android:layout_width="match_parent"
-        android:layout_height="@dimen/padding_small"
-        android:background="@color/bg_color"/>
-    <View style="@style/line"/>
+    android:descendantFocusability= "blocksDescendants">
+    <View style="@style/line" android:layout_marginTop="@dimen/padding_small"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/list_item_bg"
         android:padding="@dimen/padding_small">
-
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/headPhoto"
             android:layout_width="60dip"
@@ -37,6 +32,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/headPhoto"
+                android:layout_marginLeft="@dimen/padding_small"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
                 <TextView
@@ -47,20 +44,47 @@
                     android:textSize="@dimen/text_default"
                     android:textColor="@color/main_color"
                     android:text="赵飞燕"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvDistance"
+                    android:id="@+id/btnFans"
                     android:textSize="@dimen/text_small"
-                    android:textColor="@color/light_color"
-                    android:drawableLeft="@mipmap/img_distance"
+                    android:textColor="@color/white"
+                    android:text="关注"
+                    android:paddingTop="2dip"
+                    android:paddingBottom="2dip"
+                    android:paddingLeft="6dip"
+                    android:paddingRight="6dip"
+                    android:clickable="true"
+                    android:focusable="false"
+                    android:background="@drawable/small_button_green"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnMsg"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/white"
+                    android:text="私信"
+                    android:paddingTop="2dip"
+                    android:paddingBottom="2dip"
+                    android:paddingLeft="6dip"
                     android:gravity="center_vertical"
-                    android:text="55m"/>
+                    android:layout_marginLeft="@dimen/padding_small"
+                    android:paddingRight="6dip"
+                    android:clickable="true"
+                    android:focusable="false"
+                    android:drawableLeft="@mipmap/img_makefriend_msg"
+                    android:drawablePadding="2dip"
+                    android:background="@drawable/small_button_green"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_small"
+                android:layout_toRightOf="@+id/headPhoto"
+                android:layout_marginLeft="@dimen/padding_small"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
@@ -74,17 +98,20 @@
                     android:paddingBottom="2dip"
                     android:paddingLeft="6dip"
                     android:paddingRight="6dip"
-                    android:drawablePadding="2dip"
                     android:drawableLeft="@mipmap/img_mail"
+                    android:drawablePadding="2dip"
                     android:background="@drawable/small_button_green"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvAddress"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/light_color"
+                    android:text="安徽合肥"
+                    android:layout_marginLeft="@dimen/padding_default"/>
             </LinearLayout>
         </LinearLayout>
-
     </RelativeLayout>
-
-    <cn.goodjobs.bluecollar.view.TrendItemView
-        android:id="@+id/viewTrend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
+    <View style="@style/line"/>
 </LinearLayout>
