--- a/common/src/main/res/layout/actionbar.xml
+++ b/common/src/main/res/layout/actionbar.xml
@@ -24,7 +24,7 @@
         android:scaleType="fitCenter"
         android:background="@drawable/topbar_btn_bg"
         android:visibility="invisible"
-        android:padding="5dip"/>
+        android:padding="10dip"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:ellipsize="marquee"
-            android:textSize="@dimen/text_default"/>
+            android:textSize="@dimen/text_large"/>
 
         <TextView
             android:id="@+id/top_sub_title"
