--- a/bluecollar/src/main/res/layout/activity_resume_more.xml
+++ b/bluecollar/src/main/res/layout/activity_resume_more.xml
@@ -167,7 +167,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/etContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/padding_small"
