--- a/bluecollar/src/main/res/layout/fragment_bluejob_detail.xml
+++ b/bluecollar/src/main/res/layout/fragment_bluejob_detail.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="40dip"
+        android:layout_height="50dip"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:orientation="horizontal">
@@ -23,10 +23,15 @@
             android:singleLine="true"
             android:text="收藏"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_14"/>
+            android:textSize="@dimen/text_small"/>
+
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="@color/white"/>
 
         <TextView
-            android:id="@+id/job_callphone"
+            android:id="@+id/job_share"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -34,9 +39,14 @@
             android:ellipsize="end"
             android:gravity="center"
             android:singleLine="true"
-            android:text="电话联系"
+            android:text="分享"
             android:textColor="@color/white"
-            android:textSize="@dimen/font_size_14"/>
+            android:textSize="@dimen/text_small"/>
+
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="@color/white"/>
 
         <TextView
             android:id="@+id/job_send"
@@ -78,23 +88,67 @@
                     android:layout_height="0dip"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:textColor="@color/black"
+                    android:textColor="@color/main_color"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
-                <TextView
-                    android:id="@+id/job_cro"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:layout_marginTop="@dimen/space_10"
                     android:layout_weight="1"
-                    android:background="@drawable/list_item_bg"
-                    android:drawableRight="@drawable/r_icon"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/space_5"
-                    android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_small"
-                    />
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/job_cro"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/list_item_bg"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="@dimen/space_5"
+                            android:textColor="@color/light_color"
+                            android:textSize="@dimen/text_small"
+                            />
+
+                        <ImageView
+                            android:id="@+id/item_certify"
+                            android:layout_width="20dip"
+                            android:layout_height="15dip"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/padding_small"
+                            android:scaleType="fitXY"
+                            android:src="@mipmap/icon_uncertify"/>
+
+                        <ImageView
+                            android:id="@+id/item_vip"
+                            android:layout_width="15dip"
+                            android:layout_height="15dip"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/padding_small"
+                            android:scaleType="fitXY"
+                            android:src="@mipmap/icon_vip"/>
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/padding_small"
+                        android:layout_weight="1">
+
+                        <View
+                            android:layout_width="40dip"
+                            android:layout_height="25dip"
+                            android:layout_alignParentRight="true"
+                            android:background="@drawable/r_icon"/>
+                    </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
 
 
@@ -114,6 +168,7 @@
                     <cn.goodjobs.common.view.BabushkaText
                         android:id="@+id/job_salary"
                         style="@style/job_detail_tv"
+                        android:visibility="gone"
                         />
 
                 </LinearLayout>
@@ -163,6 +218,8 @@
                     <cn.goodjobs.common.view.BabushkaText
                         android:id="@+id/job_phone"
                         style="@style/job_detail_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_weight="0"
                         />
 
                 </LinearLayout>
@@ -199,6 +256,8 @@
                     <cn.goodjobs.common.view.BabushkaText
                         android:id="@+id/job_address"
                         style="@style/job_detail_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_weight="0"
                         />
 
                 </LinearLayout>
@@ -254,7 +313,7 @@
                     android:text="工作说明"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
 
                 <TextView
@@ -308,13 +367,12 @@
                 android:paddingRight="@dimen/padding_small"
                 android:paddingTop="@dimen/padding_small"
                 android:visibility="visible">
-
+                <!--android:drawableRight="@drawable/r_icon"-->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:drawableRight="@drawable/r_icon"
                     android:gravity="center_vertical"
-                    android:text="相似职位"
+                    android:text="您可能感兴趣的职位"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
                     />
