--- a/bluecollar/src/main/res/layout/item_bluejob.xml
+++ b/bluecollar/src/main/res/layout/item_bluejob.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginRight="@dimen/padding_small"
             app:touchHeight="100dp"
             >
 
@@ -35,7 +36,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/space_10"
             android:orientation="vertical">
 
             <LinearLayout
@@ -112,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
-                    android:maxWidth="140dip"
+                    android:maxWidth="200dip"
                     android:gravity="center_vertical"
                     android:singleLine="true"
                     android:textColor="@color/light_color"
@@ -138,7 +138,6 @@
 
                 <TextView
                     android:id="@+id/item_time"
-                    android:text="sdf"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
